src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>AVSFQB__Billing_Address__c</fullName>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Billing_City__c</fullName>
        <label>Billing City</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Billing_State__c</fullName>
        <label>Billing State</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Billing_Zip__c</fullName>
        <label>Billing Zip</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Generate_Object__c</fullName>
        <description>Request to generate Estimate, invoice or sales order</description>
        <label>Generate</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Estimate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SalesOrder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SalesReceipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refresh From Accounting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AVSFQB__PO_Number__c</fullName>
        <label>PO Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Product_Name__c</fullName>
        <label>Product Name</label>
        <picklist>
            <picklistValues>
                <fullName>DBSync</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppMashup (Salesforce.com &amp; QuickBooks)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AssessRight</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Products_Count__c</fullName>
        <description>Roll up Count of Opportunity Products for an opportunity</description>
        <label>Products Count</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AVSFQB__QB_Error__c</fullName>
        <label>QB Error</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVSFQB__QuickBooks_ItemType__c</fullName>
        <label>QuickBooks ItemType</label>
        <picklist>
            <picklistValues>
                <fullName>ItemService</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ItemNonInventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ItemOtherCharge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ItemInventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ItemInventoryAssembly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ItemFixedAsset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ItemSubtotal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ItemDiscount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ItemPayment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ItemGroup</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Quickbooks_Id__c</fullName>
        <description>QuickBooks Id</description>
        <externalId>true</externalId>
        <label>Quickbooks Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Ship_Date__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Shipping_Address__c</fullName>
        <label>Shipping Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Shipping_State__c</fullName>
        <label>Shipping State</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Shipping_Zip__c</fullName>
        <label>Shipping Zip</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Terms__c</fullName>
        <label>Terms</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Transaction_Number__c</fullName>
        <label>Transaction Number</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_Service_1__c</fullName>
        <label>Add Service 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Add_Service_2__c</fullName>
        <label>Add Service 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Add_Service_3__c</fullName>
        <label>Add Service 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AddressChangesCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AddressChangesCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_Services__c</fullName>
        <formula>(Engineering_Services_1_text__c&amp;&quot;&quot;&amp;
Engineering_Services_2_Text__c&amp;&quot;&quot;&amp;
Engineering_Services_3_text__c&amp;&quot;&quot;&amp;
Engineering_Services_4_Text__c&amp;&quot;&quot;&amp;
Engineering_Services_5_text__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Services</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_ln__c</fullName>
        <formula>LN( Amount )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount_ln</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BD_CD_Percent__c</fullName>
        <defaultValue>0.15</defaultValue>
        <label>BD/CD Percent</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Backlog_RT__c</fullName>
        <formula>Amount-Billed_Roller__c+Retainer1__c</formula>
        <label>Backlog</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Backlog__c</fullName>
        <label>Backlog</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance_Outstanding__c</fullName>
        <label>Balance Outstanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bid_Documents_Construction_Documents__c</fullName>
        <label>Bid Documents/ Construction Documents</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bid_Documents__c</fullName>
        <formula>Amount * BD_CD_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bid Documents</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billed_Roller__c</fullName>
        <label>Billed</label>
        <summarizedField>Invoice__c.Amount__c</summarizedField>
        <summaryForeignKey>Invoice__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Billed__c</fullName>
        <label>Billed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <label>Billing Address</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Email_2__c</fullName>
        <label>Billing Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_Email__c</fullName>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_Phone_Number__c</fullName>
        <label>Billing Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Billing_Zip__c</fullName>
        <label>Billing Zip</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CA_Percent__c</fullName>
        <defaultValue>0.125</defaultValue>
        <label>CA Percent</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CC_Number__c</fullName>
        <label>CC Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_on_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CC on File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CVV__c</fullName>
        <label>CVV</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Holder_Name__c</fullName>
        <label>Card Holder Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_correspondence_date__c</fullName>
        <label>Client correspondence date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Construction_Admin__c</fullName>
        <label>Construction Admin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Construction_Administration__c</fullName>
        <formula>Amount *12.5/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Construction Administration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Construction_Cost__c</fullName>
        <description>DOB Construction Cost</description>
        <label>DOB Construction Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Construction_Monthly_CA__c</fullName>
        <label>Construction (Monthly CA)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Card__c</fullName>
        <label>Credit Card</label>
        <picklist>
            <picklistValues>
                <fullName>Mastercard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DOB_APP_Percent__c</fullName>
        <defaultValue>0.10</defaultValue>
        <label>DOB APP Percent</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DOB_Approval_1__c</fullName>
        <label>DOB Approval 1</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DOB_Approval__c</fullName>
        <formula>Amount *15/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DOB Approval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DOB_Date__c</fullName>
        <label>DOB Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOB_Filing_Percent__c</fullName>
        <defaultValue>0.30</defaultValue>
        <label>DOB Filing Percent</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DOB_Filing_Set_1__c</fullName>
        <label>DOB Filing Set 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DOB_Filing_Set__c</fullName>
        <formula>Amount *30/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DOB Filing Set</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Days_Counter__c</fullName>
        <label>Days Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENGINEERS__c</fullName>
        <label>ENGINEERS</label>
        <picklist>
            <picklistValues>
                <fullName>NEW YORK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEW JERSEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOS ANGELES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAN FRANCISCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHILADELPHIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHICAGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Electrical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electrical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Sender__c</fullName>
        <description>Making Sales Head a text format</description>
        <formula>Sales_Head__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Sender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineering_Hours__c</fullName>
        <label>Engineering Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engineering_Services_1__c</fullName>
        <label>Engineering Services 1</label>
        <picklist>
            <picklistValues>
                <fullName>Mechanical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engineering_Services_1_text__c</fullName>
        <formula>IF(Mechanical__c=TRUE,&quot;HVAC: Load calculations and selection of the HVAC systems and equipment. Schematic design for the HVAC systems shall include equipment layouts. Construction documents shall include all heating and cooling equipment selections; layout and sizes of all ductwork and piping. Special ventilation systems for kitchens, bathrooms, etc. to be included as required by Code.BR()&quot; , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engineering Services 1_text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineering_Services_2_Text__c</fullName>
        <formula>IF(Electrical__c= TRUE,&quot;Electrical System: Lighting and Power Distribution.Design of all branch distribution wiring, feeders, all panels, switches, overcurrent protective devices, etc.Empty conduits shall be run for future tenant use.Electrical load letter.Existing electrical service shall be reused.&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engineering Services 2_Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineering_Services_2__c</fullName>
        <label>Engineering Services 2</label>
        <picklist>
            <picklistValues>
                <fullName>Electrical</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engineering_Services_3__c</fullName>
        <label>Engineering Services 3</label>
        <picklist>
            <picklistValues>
                <fullName>Plumbing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engineering_Services_3_text__c</fullName>
        <formula>IF(Plumbing__c=TRUE,&quot;Plumbing System: Sanitary waste and vent, Domestic water and Natural gas supply.Construction documents will include all required plumbing riser diagrams, details, plans and service equipment, etc.Also included will be all interior plumbing piping distribution of domestic cold and hot water systems, gas systems, sanitary and other plumbing equipment.Existing water and gas service shall be reused.&quot;, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engineering Services 3_text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration__c</fullName>
        <label>Expiration</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Schedule_Stage_Count__c</fullName>
        <label>Fee Schedule Stage Count</label>
        <summaryForeignKey>Invoice__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Fire_Alarm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fire Alarm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_QB_Id__c</fullName>
        <label>First QB Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Time_Populated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Time Populated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fiscal_Period__c</fullName>
        <formula>CASE( MONTH (  CloseDate ) , 1, &quot;Q1&quot;, 2, &quot;Q1&quot;, 3, &quot;Q1&quot;, 4, &quot;Q2&quot;, 5, &quot;Q2&quot;, 6, &quot;Q2&quot;, 7, &quot;Q3&quot;, 8, &quot;Q3&quot;, 9, &quot;Q3&quot;, &quot;Q4&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Q1__c</fullName>
        <formula>IF( Fiscal_Period__c =&quot;Q1&quot;, 1, 0)</formula>
        <label>Fiscal Q1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Q2__c</fullName>
        <formula>IF( Fiscal_Period__c =&quot;Q2&quot;, 1, 0)</formula>
        <label>Fiscal Q2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Q3__c</fullName>
        <formula>IF( Fiscal_Period__c =&quot;Q3&quot;, 1, 0)</formula>
        <label>Fiscal Q3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Date__c</fullName>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_QB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From QB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Synced?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Completion__c</fullName>
        <formula>if(OR(Amount =0, Amount = Null),0,Billed_Roller__c /Amount)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Completion</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Job_Criteria__c</fullName>
        <label>Job Criteria</label>
        <picklist>
            <picklistValues>
                <fullName>Mechanical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plumbing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boiler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprinkler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire Suppression</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire Alarm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Job_Number__c</fullName>
        <label>Job Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <picklist>
            <picklistValues>
                <fullName>Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shop Drawings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renovation</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Link_to_QBO__c</fullName>
        <formula>IF( QB_Id__c &lt;&gt; null ,HYPERLINK(&apos;https://c10.qbo.intuit.com/app/customerdetail?nameId=&apos; &amp; QB_Id__c, &apos;Click here&apos;) ,&apos;Opportunity is not synced to QBO.&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to QBO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Sector__c</fullName>
        <label>Market Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Apartment/House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mechanical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mechanical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NYE_Project_Number__c</fullName>
        <description>NYE accounting assigns this project number
ex: 15th project in 2016 has project number 16015</description>
        <label>NYE Project Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Source__c</fullName>
        <label>Original Source</label>
        <picklist>
            <picklistValues>
                <fullName>Organic Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referrals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offline Sources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid Social</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plumbing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Plumbing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Principal__c</fullName>
        <formula>Sales_Head__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Principal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability_of_Success__c</fullName>
        <formula>1/(1+EXP(-5.432015-(-1.076141)* Type2__c -(-0.369178)* Amount_ln__c -(-0.015633)* Proposal_Duration__c -(-0.392264)* Fiscal_Q1__c -(-0.663815)* Fiscal_Q2__c -(-0.13883)* Fiscal_Q3__c -(0.443724)* Referral__c -(1.934686)* Repeat__c -(0.562195)* Sylvester__c -(0.45606)* Web__c ))</formula>
        <label>Probability of Success</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProjectCloseDate__c</fullName>
        <label>Project Close Date</label>
        <summarizedField>Invoice__c.Excpected_Billing_Date__c</summarizedField>
        <summaryForeignKey>Invoice__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_Close_Date__c</fullName>
        <label>Project Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Manager_c__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>equals</operation>
                <value>New York Engineers</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Project Manager)</relationshipLabel>
        <relationshipName>OpportunitiesPM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Square_Footage__c</fullName>
        <label>Project Square Footage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>NB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Duration__c</fullName>
        <formula>TODAY() -  Proposal_Issued__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposal Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposal_Issued__c</fullName>
        <label>Proposal Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed_Number_of_Stories__c</fullName>
        <label>Proposed Number of Stories</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Punchlist_Percent__c</fullName>
        <defaultValue>0.025</defaultValue>
        <label>Punchlist Percent</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Punchlist_TR_1_TR_8_Inspection__c</fullName>
        <formula>Amount *2.5/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Punchlist, TR-1 &amp; TR-8 Inspection</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Punchlist__c</fullName>
        <label>Punchlist</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QB_Id__c</fullName>
        <externalId>true</externalId>
        <label>QB Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_Sync__c</fullName>
        <formula>IF(Is_Synced__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QB Synced</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_id_Formula__c</fullName>
        <formula>QB_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QB Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_For_Loss__c</fullName>
        <label>Reason For Loss</label>
        <picklist>
            <picklistValues>
                <fullName>Priced too High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specs inaccurate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Went with previous Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client did not Win Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Not Moving Forward</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over 120 Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>